Rename payment -> membership
This commit renames the payment option to membership

--- a/alumni/templates/admin/alumni/alumni/change_form.html
+++ b/alumni/templates/admin/alumni/alumni/change_form.html
@@ -5,9 +5,9 @@
     <li>
         <a href="{% url 'approval_approval' id=original.profile.id %}" target="_blank">Manage Approval</a>
     </li>
-    {% if original.payment and original.payment.customer %}
+    {% if original.membership and original.membership.customer %}
         <li>
-            <a href="https://dashboard.stripe.com/{% if stripe_test_mode %}test/{% endif%}customers/{{ original.payment.customer }}" target="_blank">View on Stripe Dashboard</a>
+            <a href="https://dashboard.stripe.com/{% if stripe_test_mode %}test/{% endif%}customers/{{ original.membership.customer }}" target="_blank">View on Stripe Dashboard</a>
         </li>
     {% endif %}
     <li>
@@ -19,7 +19,7 @@
 {% block form_top %}
     {{ block.super }}
 
-    {% if original.payment and original.payment.customer %}{% else %}
+    {% if original.setup_completed %}{% else %}
         <p class="errornote">
             User has not completed setup. 
         </p>
