--- a/registry/templates/portal/parts/payment.html
+++ b/registry/templates/portal/parts/payment.html
@@ -9,7 +9,7 @@
             <tbody>
                 <tr>
                     <td>Tier</td>
-                    <td>{{ user.alumni.payment |get_choice_field:"tier" }}</td>
+                    <td>{{ user.alumni.membership |get_choice_field:"tier" }}</td>
                 </tr>
             </tbody>
         </table>
