--- a/payments/templates/payments/subscribe.html
+++ b/payments/templates/payments/subscribe.html
@@ -185,7 +185,13 @@
 {% block content %}
     <article class="uk-article">
         <h1 class="uk-article-title">
-            Payment Information
+            {% if updating %}
+                <a href="{% url "portal" %}" class="uk-button uk-button-default uk-button-small">
+                    <span uk-icon="icon: arrow-left"></span>
+                    Back to Portal
+                </a>
+            {% endif %}
+            {{ title }}
         </h1>
 
         <div class="uk-text-lead">
@@ -211,8 +217,17 @@
             </p>
         </div>
 
+        {% if messages %}
+            {% for message in messages %}
+                <div class="uk-alert{% if message.tags %}-{{ message.tags }}{% endif %}" uk-alert>
+                    <a class="uk-alert-close" uk-close></a>
+                    <p>{{ message }}</p>
+                </div>
+            {% endfor %}
+        {% endif %}
+
         <div>
-            <form action="{% url 'setup_subscription' %}" method="post" id="payment-form" class="uk-form-horizontal">
+            <form method="post" id="payment-form" class="uk-form-horizontal">
                 {% csrf_token %}
 
                 {{ form | as_uikit_form }}
