Move some strings into template context

--- a/payments/templates/payments/subscribe.html
+++ b/payments/templates/payments/subscribe.html
@@ -306,7 +306,7 @@
                 </div>
                 {% endif %}
 
-                <button class="uk-button uk-button-primary">CONFIRM MEMBERSHIP &amp; AUTHORIZE PAYMENT NOW</button>
+                <button class="uk-button uk-button-primary">{{ next_text }}</button>
             </form>
         </div>
     </article>
