Outsource Stripe Integration JS File

--- a/payments/templates/payments/tier.html
+++ b/payments/templates/payments/tier.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block head %}
-<script src="{% static "js/tier.js" %}" type="text/javascript"></script>
+<script src="{% static "js/payments/tier.js" %}" type="text/javascript"></script>
 {% endblock %}
 
 {% block extracontent %}
