--- a/payments/templates/payments/subscribe.html
+++ b/payments/templates/payments/subscribe.html
@@ -1,185 +1,23 @@
 {% extends "base/base.html" %}
 {% load uikit_tags %}
+{% load staticfiles %}
 
 {% block title %}Membership Data{% endblock %}
 
 {% block head %}
+    
+    <!-- Stripe Integration -->
     <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
     <script src="https://js.stripe.com/v3/"></script>
-    
-    <script type="text/javascript">
-        var stripe_integration_init = function(stripe_publishable_key) {
-            // create an error elemenet
-            var errorElement = document.getElementById('card-errors');
-            var set_error = function(message){
-                if (message) {
-                    errorElement.style.display = 'block';
-                    errorElement.style.visibility = 'visible';
-                    errorElement.textContent = message;
-                } else {
-                    errorElement.style.display = 'none';
-                    errorElement.style.visibility = 'hidden';
-                    errorElement.textContent = '';
-                }
-            }
-            set_error();
-
-            // initialize stripe API
-            var stripe = Stripe(stripe_publishable_key);
-            var elements = stripe.elements();
-
-            // custom element style
-            var style = {
-                base: {
-                    color: '#32325d',
-                    fontFamily: '"Helvetica Neue", Helvetica, sans-serif',
-                    fontSmoothing: 'antialiased',
-                    fontSize: '16px',
-                    '::placeholder': {
-                        color: '#aab7c4'
-                    }
-                },
-                invalid: {
-                    color: '#fa755a',
-                    iconColor: '#fa755a'
-                }
-            };
-
-            
-            // Create input elements for card and iban
-            var card = elements.create('card', { style: style });
-            card.mount('#card-element');
-            var iban = elements.create('iban', { style: style, supportedCountries: ['SEPA'] });
-            iban.mount('#iban-element');
-
-            // handle change errors properly
-            var handleChangeErrors = function(event) {
-                set_error(event.error ? event.error.message : undefined);
-            }
-            card.addEventListener('change', handleChangeErrors);
-            iban.addEventListener('change', handleChangeErrors);
-
-            // handle changing of payment type
-            var paymentElement = $('#id_payment_type');
-            paymentElement.change(function () {
-                // clear out the error
-                set_error(undefined);
-
-                // and switch accordingly
-                var selected = $(this).find(':selected').val();
-                if (selected === 'card') {
-                    $("#stripe-card-elements").show();
-                    $("#stripe-iban-elements").hide();
-                } else {
-                    $("#stripe-card-elements").hide();
-                    $("#stripe-iban-elements").show();
-                }
-            }).trigger('change');
-
-
-            // handle form suibmission
-            // Handle form submission
-            var form = document.getElementById('payment-form');
-            form.addEventListener('submit', function (event) {
-                event.preventDefault();
-
-                // grab the payment type
-                ptype = paymentElement.val();
-                if (ptype == 'card') {
-                    submitCard();
-                } else if ( ptype == 'sepa' ) {
-                    submitSepa();
-                } else {
-                    set_error('Something went wrong, please try again later or contact support. ')
-                }
-            });
-
-            // handle submitting a card
-            var submitCard = function() {
-                stripe.createToken(card).then(function(result) {
-                    if (result.error) {
-                        set_error(result.error.message);
-                        return;
-                    }
-                    
-                    submitForm(result.token.id, undefined);
-                });
-            };
-            
-            // handle submitting a sepa token
-            var submitSepa = function() {
-                stripe.createSource(iban, {
-                    type: 'sepa_debit',
-                    currency: 'eur',
-                    owner: {
-                        name: document.getElementById('name').value
-                    },
-                    mandate: {},
-                }).then(function(result) {
-                    if (result.error) {
-                        set_error(result.error.message);
-                        return;
-                    }
-
-                    submitForm(undefined, result.source.id);
-                })
-            };
-
-            var submitForm = function(card_token, source_id) {
-                // unmount both elements to be sure they do not leak
-                // any data to the server
-                card.unmount();
-                iban.unmount();
-
-                // fill form data
-                document.getElementById('id_card_token').value = card_token || '';
-                document.getElementById('id_source_id').value = source_id || '';
-                document.getElementById('name').value = '';
-
-                // and submit the form
-                document.getElementById("payment-form").submit();
-            }
-        };
-    </script>
+    <script src="{% static "js/payments/subscribe.js" %}" type="text/javascript"></script>
     <script type="text/javascript">
         window.onload = function() {
             stripe_integration_init('{{ stripe_publishable_key }}');
         }
     </script>
-    <style>
-        .StripeElement {
-            background-color: white;
-            color: #32325d;
-            height: 40px;
-
-            margin-top: 5px;
-            margin-bottom: 5px;
-
-            padding: 10px 12px;
-            border-radius: 4px;
-            border: 1px solid transparent;
-            box-shadow: 0 1px 3px 0 #e6ebf1;
-            -webkit-transition: box-shadow 150ms ease;
-            transition: box-shadow 150ms ease;
-        }
-
-        .uk-stripe-element {
-            width: 100%;
-            max-width: 100%;
-        }
-
-        .StripeElement--focus {
-            box-shadow: 0 1px 3px 0 #cfd7df;
-        }
-
-        .StripeElement--invalid {
-            border-color: #fa755a;
-        }
-
-        .StripeElement--webkit-autofill {
-            background-color: #fefde5 !important;
-        }
-    </style>
+    
+    <!-- the styles -->
+    <link rel="stylesheet" href="{% static "css/payments/stripe.css" %}" type="text/css">
 {% endblock %}
 
 {% block content %}
