Better payments view for alumni

--- a/payments/templates/payments/subscribe.html
+++ b/payments/templates/payments/subscribe.html
@@ -24,9 +24,9 @@
     <article class="uk-article">
         <h1 class="uk-article-title">
             {% if updating %}
-                <a href="{% url "portal" %}" class="uk-button uk-button-default uk-button-small">
+                <a href="{% url "view_payments" %}" class="uk-button uk-button-default uk-button-small">
                     <span uk-icon="icon: arrow-left"></span>
-                    Back to Portal
+                    Back to Payment Information
                 </a>
             {% endif %}
             {{ title }}
