--- a/registry/templates/portal/parts/payment.html
+++ b/registry/templates/portal/parts/payment.html
@@ -2,7 +2,7 @@
 
 <div class="uk-card uk-card-default">
     <div class="uk-card-header">
-        <h3 class="uk-card-title uk-margin-remove-bottom">My Membership</h3>
+        <h3 class="uk-card-title uk-margin-remove-bottom">Membership &amp Payment Information</h3>
     </div>
     <div class="uk-card-body">
         <table class="uk-table uk-table-small">
@@ -15,9 +15,6 @@
         </table>
     </div>
     <div class="uk-card-footer">
-        <a href="{% url 'edit_payments' %}" class="uk-button uk-button-text">View Payments</a>
-        {% if user.alumni.can_update_payment %}
-            <a href="{% url 'update_subscription' %}" class="uk-button uk-button-text">Update Payment Method</a>
-        {% endif %}
+        <a href="{% url 'view_payments' %}" class="uk-button uk-button-text">View Payment Information</a>
     </div>
 </div>
