--- a/registry/templates/setup/setup.html
+++ b/registry/templates/setup/setup.html
@@ -17,7 +17,7 @@
             {% csrf_token %}
             {{ form | as_uikit_form }}
             {% block extracontent %}{% endblock %}
-            <input type="submit" class="uk-button uk-button-primary" value="{{ next_text }}">
+            <input type="submit" id="input_id_submit" class="uk-button uk-button-primary" value="{{ next_text }}">
         </form>
     </div>
 </article>
