Update payment information text

--- a/payments/templates/payments/subscribe.html
+++ b/payments/templates/payments/subscribe.html
@@ -35,7 +35,7 @@
         <div class="uk-text-lead">
             <p>
                 All membership fees and donations go towards the non-profit purpose of the Association (see §3 of our
-                <a href="https://jacobs-alumni.de/charter/" target="'_blank">charter</a>).
+                <a href="https://jacobs-alumni.de/charter/" target="_blank">charter</a>).
             </p>
 
             <p>
@@ -44,13 +44,15 @@
                 our growing global network.
                 In particular, you are supporting scholarships to Jacobs students and the many projects we have in our
                 pipeline!
+                Read more in our <a href="https://jacobs-alumni.de/faq/#q10" target="_blank">FAQs</a>. 
             </p>
 
             <p>
-                Alumni membership can be deducted from (German) taxes.
+                    Alumni membership can be deducted from (German) taxes.
+                    For donations below 200&euro; you do not need a donation receipt from us (see the <a href="https://www.gesetze-im-internet.de/estdv_1955/__50.html" target="_blank">applicable German law</a>), you can simply use your bank statement as proof. 
             </p>
             <p>
-                If you run into any trouble or have any questions, please drop us an e-mail at <a
+                If you have any questions, or need to request donation receipts for amounts larger than 200&euro;, please drop us an e-mail at <a
                     href="mailto:support@jacobs-alumni.de">support@jacobs-alumni.de</a>.
             </p>
         </div>
