--- a/payments/templates/payments/view.html
+++ b/payments/templates/payments/view.html
@@ -20,7 +20,8 @@
     <div class="uk-text-lead">
         <p>
             All information visible on this page is securely stored with our payment provider, <a href="https://stripe.com/">Stripe</a>. 
-            Apart from the dates of your membership, we do not have a copy of this data on our server. 
+            Stripe is <b>fully compliant with industry security standards</b> (certified PCI Level 1 Service Provider) and used by companies and nonprofits alike (e.g. Unicef, Booking.com, Indiegogo).
+            Apart from the dates of your membership, we do not have a copy of your payment data (e.g. credit card number, card expiry date, CVV or bank account details) on our server. 
         </p>
         
         <p>
@@ -33,7 +34,10 @@
         <div class="uk-alert uk-alert-danger" uk-alert>
             <h3>An error occurred</h3>
             <p>
-                {{ error | safe }}
+                {{ error }}
+            </p>
+            <p>
+                Please contact support if this problem persists. 
             </p>
         </div>
     {% else %}
