--- a/MemberManagement/templates/base/header.html
+++ b/MemberManagement/templates/base/header.html
@@ -21,6 +21,7 @@
             {% if can_view_atlas %}<li><a href="{% url 'atlas_home' %}">Atlas</a></li>{% endif %}
             {% if not user.is_authenticated %}<li><a class="uk-active" href="{% url 'login' %}">Login</a></li>{% endif %}
             {% if user.is_staff %}<li><a class="uk-active" href="{% url 'admin:index' %}">Django Admin</a></li>{% endif %}
+            {% if user.is_impersonate %}<li><a class="uk-active" href="{% url 'impersonate-stop' %}">Stop Impersonating</a></li>{% endif %}
         </ul>
         <div class="uk-navbar-item">
             {% if user.is_authenticated %}
