Add DateField Polyfill
This commit adds a polyfill for date input fields

--- a/MemberManagement/templates/base/base.html
+++ b/MemberManagement/templates/base/base.html
@@ -55,6 +55,7 @@
 
         {% block scripts %}
             <script src="{% static "cookielaw/js/cookielaw.js" %}"></script>
+            <script src="{% static "nodep-date-input-polyfill/nodep-date-input-polyfill.dist.js" %}"></script>
             <script src="{% static "uikit/js/uikit.js" %}" type="text/javascript"></script>
             <script src="{% static "uikit/js/uikit-icons.js" %}" type="text/javascript"></script>
         {% endblock %}
