Replace 'staticfiles' by 'static' tags
This commit replaces {% load 'staticfiles' %} by {% load 'static' %}
inside templates, to address an upcoming removal in Django 3.0.

--- a/MemberManagement/templates/base/footer.html
+++ b/MemberManagement/templates/base/footer.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 
 <footer class="footer uk-background-secondary uk-light uk-padding">
     {% include "base/devel.html" %}
