--- a/MemberManagement/templates/base/header.html
+++ b/MemberManagement/templates/base/header.html
@@ -1,4 +1,4 @@
-{% load staticfiles %}
+{% load static %}
 <header class="uk-sticky uk-sticky-fixed uk-width-1-1" style="position: fixed; top: 0; width: 100%; ">
   <div class="uk-navbar-container navbar uk-dark">
     <nav class="uk-navbar" {% if show_devel_warning %}style="background-color: #fef4f6; "{% endif %}>
