--- a/custom_auth/templates/auth/token_sent.html
+++ b/custom_auth/templates/auth/token_sent.html
@@ -1,6 +1,6 @@
 {% extends "base/base.html" %}
 {% load uikit_tags %}
-{% load staticfiles %}
+{% load static %}
 
 {% block title %}Membership Portal - Jacobs University Bremen Alumni {% endblock %}
 
