Update email template

--- a/custom_auth/templates/emails/approval/base.html
+++ b/custom_auth/templates/emails/approval/base.html
@@ -72,10 +72,11 @@
 <ul>
     <li>
         <b>Vote</b> in elections and at the General Assembly to shape the future of the Association!
-        Check our <a href="https://jacobs-alumni.de/charter/">jCharter</a> to learn more. 
+        Check our <a href="https://jacobs-alumni.de/charter/">Charter</a> to learn more. 
     </li>
     <li>
-        Become a <b>board member</b> and represent your fellow alumni - elections are coming up!
+        Become a <b>board member</b> and represent your fellow alumni. 
+        We will inform the community via email whenever there are open positions. 
         Check your @jacobs-alumni.de email to stay in the loop! 
     </li>
     <li>
